# RayON

./: .clang-format  .clang-tidy  .clangd  .gitattributes  .gitignore  404.html  CLAUDE.md  CLI_ARGUMENTS.md  CMakeLists.txt  CMakePresets.json  CMakePresets.json.prout  CUDA_OPTIMIZATION_PLAN.md  Doxyfile  README.md  README_BENCHMARK.md  README_BUILD.md  ROADMAP.md  ROUGH_MIRROR_README.md  SPHERICAL_CHECKERBOARD_FIX.md  TINTED_ROUGH_MIRROR_README.md  TODOS.md  bench.sh  bench_results.csv  compile_commands.json  imgui.ini  index.html  make_video.sh  my_benchmark_config.yaml  ray_tracer_cpp.code-workspace  run.sh  semProj_README.md  sitemap.xml  v0_single_threaded
.github/: copilot-instructions.md
.github/workflows/: deploy-docs.yml  docs-sync-check.yml
about/: index.html
architecture/: index.html
architecture/cuda-renderer/: index.html
architecture/progressive-rendering/: index.html
architecture/scene-system/: index.html
assets/: extra.css
benchmark_configs/erato/: erato_4k_fill.yaml  erato_hd_high.yaml
benchmark_configs/ground_truth/: conf_room_1_ground_truth.yaml  conf_room_2_ground_truth.yaml  erato_ground_truth.yaml
benchmark_configs/standard/: conf_room_1_4k_fill.yaml  conf_room_1_hd_high.yaml  conf_room_1_hd_std.yaml  conf_room_2_4k_fill.yaml  conf_room_2_hd_high.yaml  conf_room_2_hd_std.yaml  erato_hd_std.yaml
benchmark_results/full_benchmark_no_opti/: 2025-12-09_19-29-10_conf_room_2_4k_fill.json  2025-12-09_19-29-10_conf_room_2_4k_fill.txt  2025-12-09_19-30-13_conf_room_2_hd_std.json  2025-12-09_19-30-13_conf_room_2_hd_std.txt  2025-12-09_19-36-19_conf_room_1_4k_fill.json  2025-12-09_19-36-19_conf_room_1_4k_fill.txt  2025-12-09_19-41-45_erato_4k_fill.json  2025-12-09_19-41-45_erato_4k_fill.txt  2025-12-09_19-42-56_conf_room_1_hd_std.json  2025-12-09_19-42-56_conf_room_1_hd_std.txt  2025-12-09_19-43-46_erato_hd_std.json  2025-12-09_19-43-46_erato_hd_std.txt  2025-12-09_19-46-55_conf_room_2_hd_high.json  2025-12-09_19-46-55_conf_room_2_hd_high.txt  2025-12-09_19-50-01_conf_room_1_hd_high.json  2025-12-09_19-50-01_conf_room_1_hd_high.txt  2025-12-09_19-51-38_erato_hd_high.json  2025-12-09_19-51-38_erato_hd_high.txt  summary.csv
benchmark_results/ground_truth/: 2025-12-10_00-55-38_conf_room_1_ground_truth.json  2025-12-10_00-55-38_conf_room_1_ground_truth.txt  2025-12-10_02-36-36_conf_room_2_ground_truth.json  2025-12-10_02-36-36_conf_room_2_ground_truth.txt  2025-12-10_03-01-36_erato_ground_truth.json  2025-12-10_03-01-36_erato_ground_truth.txt  summary.csv
benchmark_results/optimization_0/: 2025-12-15_22-22-40_erato_4k_fill.json  2025-12-15_22-22-40_erato_4k_fill.txt  2025-12-15_22-23-32_erato_hd_std.json  2025-12-15_22-23-32_erato_hd_std.txt  2025-12-15_22-25-07_erato_hd_high.json  2025-12-15_22-25-07_erato_hd_high.txt  summary.csv
benchmark_results/optimization_1/: 2025-12-15_22-57-24_erato_4k_fill.json  2025-12-15_22-57-24_erato_4k_fill.txt  2025-12-15_22-58-13_erato_hd_std.json  2025-12-15_22-58-13_erato_hd_std.txt  2025-12-15_22-59-49_erato_hd_high.json  2025-12-15_22-59-49_erato_hd_high.txt  summary.csv
benchmark_results/optimization_2/: 2025-12-16_10-15-28_erato_4k_fill.json  2025-12-16_10-15-28_erato_4k_fill.txt  2025-12-16_10-16-18_erato_hd_std.json  2025-12-16_10-16-18_erato_hd_std.txt  2025-12-16_10-17-53_erato_hd_high.json  2025-12-16_10-17-53_erato_hd_high.txt  summary.csv
benchmark_results/optimization_3/: 2025-12-16_11-22-30_erato_4k_fill.json  2025-12-16_11-22-30_erato_4k_fill.txt  2025-12-16_11-23-11_erato_hd_std.json  2025-12-16_11-23-11_erato_hd_std.txt  2025-12-16_11-24-30_erato_hd_high.json  2025-12-16_11-24-30_erato_hd_high.txt  summary.csv
benchmark_results/optimization_4/: 2025-12-16_12-07-29_erato_4k_fill.json  2025-12-16_12-07-29_erato_4k_fill.txt  2025-12-16_12-08-10_erato_hd_std.json  2025-12-16_12-08-10_erato_hd_std.txt  2025-12-16_12-09-29_erato_hd_high.json  2025-12-16_12-09-29_erato_hd_high.txt  summary.csv
explanations/: AREA_LIGHT_README.md  BVH_ACCELERATION.md  CONSTANT_SHOWNORMALS_MATERIALS.md  CUDA_RENDER_EXPLANATION.md  MATERIAL_SYSTEM_FIXES.md  NEW_MATERIAL_DISPLAY.md  NORMAL_ARROWS_OVERLAY.md  PROGRESSIVE_SDL_RENDERING.md  REALTIME_DISPLAY_README.md  ROUGH_MIRROR_README.md  SPHERICAL_CHECKERBOARD_FIX.md  STRUCT_MATERIAL_IMPLEMENTATION.md  TINTED_ROUGH_MIRROR_README.md  VULKAN_VS_CUDA_PERFORMANCE.md  YAML_SCENE_LOADER.md
explanations/lambert sampling/: explanations_lambert_sampling.md  orthonormal_basis.md
features/: index.html
features/interactive/: index.html
features/obj-loading/: index.html
features/scenes/: index.html
features/sdf-shapes/: index.html
gallery/: index.html
getting-started/: index.html
history/: index.html
how-it-works/: index.html
how-it-works/bvh/: index.html
how-it-works/materials/: index.html
how-it-works/ray-tracing/: index.html
how-it-works/sampling/: index.html
performance/: index.html
resources/: README.md  bvh_test_scene.yaml  cornell_box.yaml  material_laboratory.yaml
resources/models/: PokemonBall.mtl  isc-text.mtl  sci-fi.mtl  victory.mtl
resources/scenes/: 01_anisotropic_metals_test.yaml  01_anisotropic_scene_obj.yaml  02_displacement_garden.yaml  03_platonic_solids.yaml  04_obj_dragon.yaml  04_obj_statue.yaml  04_obj_test_scene.yaml  05_material_laboratory.yaml  06_caustics_chapel.yaml  09_color_bleed_box.yaml  10_isc_neons_bunny.yaml  11_soap_bubbles.yaml  12_clearcoat_pokemonball.yaml  README.md  SCENE_FORMAT.md  bvh_stress_courtyard.yaml  bvh_test_scene.yaml  caustics_chapel.yaml  color_bleed_box.yaml  cornell_box.yaml  default_scene.yaml  displacement_garden.yaml  interactive_preview_fast.yaml  invisible_light_studio.yaml  mirror_tunnel.yaml  obj_test_scene.yaml  pattern_gallery.yaml  photoreal_interior_harder.yaml  platonic_solids.yaml  simple_scene.yaml  (+2 more)
scripts/: benchmark.sh  compare_last_two_images.sh  dump2pdf.sh  generate_benchmark_configs.py  generate_material_gallery.py  generate_platonic_solids.py  run_benchmarks.py  serve_docs.sh
search/: search_index.json
website/: README.md  hooks.py  mkdocs.yml  pyproject.toml
(+221 files in other folders)
